--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="dashboard">
-        <h1>Weather App</h1>
+        <h1>Weatherly</h1>
         <div class="main-content">
 
             <div class="search-bar">
